# desafioCoteFacil

./: .env.example  LICENSE  README.md  api_client.py  enqueue_example.py  enqueue_pedido.py  order_runner.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_scraper.py  run_worker.py  scraper_runner.py  scrapy.cfg  worker.py
servimed_scraper/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py
servimed_scraper/spiders/: order_spider.py  products_spider.py
tests/: __init__.py  conftest.py  test_api_client.py  test_order_runner.py  test_worker.py
tests_mock_server/: app.py
